Upgrade bootstrap past 4.1.2.
4.1.2 had a security fix for CVE-2018-14041. I don't think we were
vulnerable to that bug, but it's worth keeping up-to-date anyway.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "autoprefixer": "^7.2.4",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.1.2",
     "clean-css-cli": "^4.1.10",
     "postcss-cli-simple": "^1.0.4"
   }
